adding Jekyll SEO plugin

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="{{ "/assets/favicon/site.webmanifest" | prepend: site.baseurl }}">
   <link rel="mask-icon" href="{{ "/assets/favicon/safari-pinned-tab.svg" | prepend: site.baseurl }}" color="#5bbad5">
 
-  {%- seo -%}
+  {% seo %}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
   {%- feed_meta -%}
