change footer information, adding site theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
 
     <div class="foot-cont">
       <div class="bott">
-        <p>&copy; {{ site.time | date: '%Y' }} 林染, Powered by
-          <a href="http://jekyllrb.com">Jekyll</a></p>
+        <p>&copy; {{ site.time | date: '%Y' }} 林染</p>
+        <p>Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+        <p>Theme by <a href="https://jekyll.github.io/minima/">Minima</a></p>
       </div>
   
       <div class="social-links">
