Optimize footer style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,7 @@
     <div class="foot-cont">
       <div class="bott">
         <p>&copy; {{ site.time | date: '%Y' }} 林染</p>
-        <p>Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
-        <p>Theme by <a href="https://jekyll.github.io/minima/">Minima</a></p>
+        <p style="color: darkgrey;font-size: 0.8em;margin-top: -14px;">Powered by <a href="http://jekyllrb.com">Jekyll</a>, Theme by <a href="https://jekyll.github.io/minima/">Minima</a></p>
       </div>
   
       <div class="social-links">
